--- a/package.json
+++ b/package.json
@@ -41,9 +41,13 @@
     "babel-jest": "^24.8.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "csv-writer": "^1.5.0",
+    "faker": "^4.1.0",
+    "fakerator": "^0.3.0",
     "jest": "^24.8.0",
     "jquery": "^3.4.1",
     "mongodb": "^3.2.7",
+    "mongoose": "^5.6.7",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
